src/ast/snapshots/notabene__ast__parser__tests__parse_h1.snap
---
source: src/ast/parser.rs
expression: blocks
---
- Heading:
    span:
      start: 0
      end: 10
    level: 1
    inlines:
      - Literal:
          span:
            start: 2
            end: 11
