src/ast/snapshots/notabene__ast__parser__tests__parse_h2-3.snap
---
source: src/ast/parser.rs
expression: blocks
---
- Heading:
    span:
      start: 0
      end: 36
    level: 2
    inlines:
      - Link:
          span:
            start: 3
            end: 37
          content:
            span:
              start: 4
              end: 14
          target: "https://example.org/"
