src/ast/snapshots/notabene__ast__parser__tests__parse_h2-4.snap
---
source: src/ast/parser.rs
expression: blocks
---
- Heading:
    span:
      start: 0
      end: 68
    level: 2
    inlines:
      - Link:
          span:
            start: 0
            end: 34
          content:
            span:
              start: 1
              end: 11
          target: "https://example.org/"
