src/ast/snapshots/notabene__ast__parser__tests__parse_h2-5.snap
---
source: src/ast/parser.rs
expression: blocks
---
- Heading:
    span:
      start: 0
      end: 32
    level: 2
    inlines:
      - Link:
          span:
            start: 3
            end: 10
          content:
            span:
              start: 4
              end: 9
          target: "https://example.org/"
      - Literal:
          span:
            start: 10
            end: 32
