src/ast/snapshots/notabene__ast__parser__tests__parse_h2-8.snap
---
source: src/ast/parser.rs
expression: blocks
---
- Heading:
    span:
      start: 0
      end: 102
    level: 2
    inlines:
      - Link:
          span:
            start: 0
            end: 29
          content:
            span:
              start: 1
              end: 6
          target: "https://example.org/"
      - Literal:
          span:
            start: 29
            end: 51
