src/ast/snapshots/notabene__ast__parser__tests__parse_h3.snap
---
source: src/ast/parser.rs
expression: blocks
---
- Heading:
    span:
      start: 0
      end: 8
    level: 3
    inlines:
      - Literal:
          span:
            start: 4
            end: 9
