src/ast/snapshots/notabene__ast__parser__tests__parse_list.snap
---
source: src/ast/parser.rs
expression: blocks
---
- List:
    span:
      start: 0
      end: 126
    items:
      - span:
          start: 2
          end: 28
      - span:
          start: 31
          end: 58
      - span:
          start: 61
          end: 126
